Fix Dockerfile and add app structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ sqlmodel
 sqlalchemy[asyncio]
 geoalchemy2
 psycopg[binary]
+alembic
 pydantic-settings
-
+slowapi
+python-jose[cryptography]
+passlib[bcrypt]
+structlog
